# Fitness-assistant

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.app  Dockerfile.bot  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
TelegramBot/: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py
api/: __init__.py  __main__.py  main.py
api/app/: __init__.py  app.py
api/routers/: __init__.py  actions.py  activities.py  llm.py  user_activity.py  users.py
bot/: __main__.py  llm_interaction.py  onboarding.py
bot/handlers/: __init__.py  common.py  fitness.py
bot/keyboards/: inline.py
bot/middlewares/: auth.py
bot/states/: user_states.py
bot/utils/: api_client.py
docs/: designdoc.md  setup-poetry.md
fitness-assistant-nac5Jccc-py3.12/: pyvenv.cfg
llm/: chat_memory.py  config_loader.py  llm_config.yaml  models.py  workflow.py
migrations/: env.py
src/: logging_config.py  utils.py
src/config/: settings.py
src/database/: __init__.py  connection.py
src/database/models/: __init__.py  action.py  activity.py  base.py  message.py  sub_summary.py  train_program.py  user.py  user_activity.py
src/dependencies/: __init__.py  database.py  redis.py
src/migrations/: env.py
src/migrations/versions/: 216716d73576_initial_schema.py  55abc90e848f_add_subsummary.py  d2f8b0a76127_make_telegram_id_unique.py
src/schemas/: __init__.py  action.py  activity.py  base.py  user.py  user_activity.py
src/services/: __init__.py  activity_service.py  llm_service.py  user_service.py
src/views/: llm.py  redis.py  users.py
tests/: conftest.py  test_api.py  test_onboarding.py  test_redis.py
