[tool.poetry]
name = "fitness-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.8.0"
asyncpg = "0.30.0"
click = "8.1.8"
dnspython = "2.7.0"
email-validator = "2.2.0"
fastapi = "0.115.9"
h11 = "0.14.0"
httptools = "0.6.4"
idna = "3.10"
pydantic = "2.10.6"
pydantic-settings = "2.8.0"
pydantic-core = "2.27.2"
python-dotenv = "1.0.1"
sniffio = "1.3.1"
sqlalchemy = "2.0.38"
starlette = "0.45.3"
typing-extensions = "4.12.2"
uvicorn = "0.34.0"
uvloop = "0.21.0"
langchain = "^0.3.19"
langchain-openai = "^0.3.7"
greenlet = "^3.1.1"
aiogram = "^3.18.0"
langchain-google-genai = "^2.0.11"
alembic = "^1.15.1"
pytest = "^8.3.5"
redis = "^5.2.1"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
pre-commit = "^4.1.0"
pytest-asyncio = "^0.25.3"
asgi-lifespan = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
